# pkg-cli

./: LICENSE  README.md  package.json  package.py  requirements.txt  setup.cfg  setup.py
docs/: conf.py  index.rst  requirements.txt
pkg/: __init__.py  __main__.py  commands.py  decorators.py  package.json  setup.py  utils.py
pkg/templates/: package.py
tests/: test_commands.py  test_decorators.py  utils.py
