[metadata]
name = pkg-cli
version = attr: pkg.__version__
author = Hashem
author_email = PersonalHashem@gmail.com
description = the package manager for Python
keywords = pypi, package, pkg-cli, pkg
long_description = file: README.md
long-description-content-type = text/markdown
license = MIT

classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

project_urls =
    Source = https://github.com/githashem/pkg-cli
    Tracker = https://github.com/githashem/pkg-cli/issues

[options]
python_requires = >=3.7
packages = find:
include_package_data = true
install_requires =
    twine >= 3.4.2
    setuptools >= 57.4.0

[options.entry_points]
console_scripts =
    pkg = pkg.__main__:main
